# c-programming-cookbook

./: .gitignore  CMakeLists.txt  Dockerfile  Justfile  README.md  ascii.c  docker-compose.yml  docker_buildx_all.sh  env_macos.sh  malloc.c  multiarray_struct.c  ndarray.c  ndarray.h  types.c  utils.c  utils.h
docker/: Dockerfile  docker-compose.yml  docker_buildx_all.sh  llvm.list
src/: CMakeLists.txt  ascii.c  fixed_point_arith.c  fixed_point_mat.c  float16.c  hexbuf.c  linked_list.c  malloc.c  matrix.c  multiarray.c  multiarray_struct.c  ndarray.c  pointers.c  rotating_cube.c  signal_handler.c  string.c  structs.c  types.c  utils.c
